--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,30 +8,45 @@ body{
     background: url('../images/dark-grey-terrazzo.png')
 }
 
-.card-body{
-    color: white !important;
-    background-color: black !important;
+.top-card{
+    color: #FFFFFF !important;
+    text-shadow: 1px 1px #000000;
+    background: url('../images/smoke_train.gif');
+    background-position: center top;
+    -webkit-filter: grayscale(100%);
+    filter: gray;
+}
+
+.bottom-card{
+    color: #FFFFFF !important;
+    text-shadow: 1px 1px #000000;
+    background: url('../images/smoke_train.gif');
+    background-position: center bottom;
+    -webkit-filter: grayscale(100%);
+    filter: gray;
 }
 
 .bg-primary{
-    color: black !important;
-    background-color: white !important;
+    color: #000000 !important;
+    background-color: #FFFFFF !important;
 }
 
 .btn-primary{
-    color: black !important;
-    background-color: white !important;
+    color: #000000 !important;
+    background-color: #FFFFFF !important;
+    border: 1px solid #000000 !important;
 }
 
 .btn-primary:hover, .btn-primary:active{
-    color: white !important;
-    background-color: black !important;
+    color: #FFFFFF !important;
+    background-color: #000000 !important;
+    border: 1px solid #FFFFFF !important;
 }
 
 .jumbotron{
     background: url('../images/train.gif');
     background-position: center;
-    color: white;
-    text-shadow: 1px 1px black;
-    border: 1px solid white !important;
+    color: #FFFFFF;
+    text-shadow: 1px 1px #000000;
+    border: 1px solid #FFFFFF !important;
 }
