--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,8 @@ body{
 }
 
 .bg-primary{
-    color: #000000 !important;
-    background-color: #FFFFFF !important;
+    color: #FFFFFF !important;
+    background-color: #000000 !important;
 }
 
 .btn-primary{
